# oauth-rust

./: .aider.conf.yml  .env.template  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  docker-compose.yml  rustfmt.toml  test.env
migrations/: 00-init.sql  20251112212514_refresh_tokens.sql
prompts/: context.md
src/: main.rs
src/features/authorization/: authorize.rs  mod.rs  router.rs  router_test.rs  sign_in.rs  token.rs
src/features/client/: landing_page.rs  mod.rs  router.rs
src/features/status/: mod.rs
static/client/: sign_in.html  welcome.html
tests/: status_test.rs
tests/features/status/: mod.rs
