[package]
name = "lab-rust-iam"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
] }
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tower = "0.5.2"
