[package]
name = "lab-rust-iam"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["form", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.8.5"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "uuid",
  "chrono",
] }
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
form_urlencoded = "1.2.2"
tower = "0.5.2"
